networkpolicy/app-np.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: app
  labels:
    app: users
spec:
  containers:
    - image: nginx
      name: app
      args:
      - sleep
      - 1d
