networkpolicy/db-np.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: db
  labels:
    db: users
spec:
  containers:
    - image: nginx
      name: db
